--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ log = "0.4.17"
 serde = {version= "1.0.147", features=["derive"]}
 serde_json = "1"
 futures = "0.3"
+csv-async = {version=  "1.1", features=["tokio", "with_serde"]}
+tokio = { version = "1.21.1", features = ["full"] }
+sea-orm = { version = "0.10.3", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
+config = {version = "0.13.2", features = ["toml"] }
