--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,7 @@ serde_json = "1"
 futures = "0.3"
 csv-async = {version=  "1.1", features=["tokio", "with_serde"]}
 tokio = { version = "1.21.1", features = ["full"] }
-sea-orm = { version = "0.10.3", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
+sea-orm = { version = "0.10.3", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros"] }
 config = {version = "0.13.2", features = ["toml"] }
+chrono = { version = "0.4", features = ["serde"] }
+serde_with = {version= "2.1.0", features = ["chrono"]}
